--- a/metadata.universal/changelog.txt
+++ b/metadata.universal/changelog.txt
@@ -1,3 +1,9 @@
+[B]5.3.4[/B]
+- fixed: search results
+
+[B]5.3.2[/B]
+- fixed: search results
+
 [B]5.3.1[/B]
 - changed: use new language directory structure
 - added: assets tag in addon.xml
